Update translate in header

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="Página web personal de Andres Alfonso Mira Mejia (IngAamira), Ingeniero Informático y Especialista en Inteligencia de Negocios.">
   <title>WebsiteIngaamiraDev</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
