--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="description" content="Página web personal de Andres Alfonso Mira Mejia (IngAamira), Ingeniero Informático y Especialista en Inteligencia de Negocios.">
-  <title>WebsiteIngaamiraDev</title>
+  <title>Website IngAamira</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
